Added login, registration page, and some changes to the website. Added more styling to css.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -30,7 +30,7 @@ body {
     font-size: 28px;
     margin: auto auto .1rem auto;
     justify-content: space-between;
-    width: 80%;
+    width: 100%;
 }
 
 .nav-links a {
@@ -62,6 +62,12 @@ body {
     text-shadow: 5px 5px 5px #302f2f;
 }
 
+.nav-middle p {
+    font-size: 30px;
+    margin: 1rem auto 8rem auto;
+    width: 10%
+}
+
 /* Footer Styling */
 footer {
     background: linear-gradient(to right, #3a7bd5, #00d2ff);
@@ -89,9 +95,32 @@ footer {
 }
 
 /* Login Page Styling */
+button {
+    border-width: 0px;
+    border-radius: 6px;
+    font-size: 19px;
+    font-family: 'Gayathri', sans-serif;
+    height: 30px;
+    margin-bottom: 1rem;
+    text-align: center;
+    padding: 6px 5px;
+    width: 68px;
+}
+
+button:hover {
+    background: linear-gradient(to right, #00d2ff, #3a7bd5);
+    cursor: pointer;
+}
+
+button:active {
+    border-width: 0px;
+    transform: scale(1.1);
+}
+
 form {
     display: flex;
     flex-direction: column;
+    font-size: 30px;
     margin: 3rem auto;
     width: 26%;
 }
@@ -104,14 +133,37 @@ label {
     margin: .5rem auto;
 }
 
-.uname {
-    font-size: 30px;
-}
-
-.psw {
-    font-size: 30px;
-}
-
 input[type=username], input[type=password] {
-    width: 25%;
+    width: 30%;
+}
+
+.login-p {
+    font-size: 20px;
+}
+
+.reg-a {
+    color: black;
+    text-decoration: underline;
+}
+
+.reg-a:hover {
+    color: #e6e6e6;
+}
+
+/* Registration Page Styling */
+.register {
+    background-color: #ced9e2;
+    border: solid black;
+    border-width: 2px;
+    font-size: 22px;
+    word-spacing: 10px;
+}
+
+.register div {
+    margin: 1rem auto;
+    width: 100%;
+}
+
+.name {
+    flex-direction: column;
 }
