--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,6 +12,8 @@
         </div>
 
         <input type="button" value="Submit">
+
+        <p class="login-p">No account? Create one, <span class="reg-link"><a class="reg-a" href="/register">here</a></span>.</p>
     </div>
 </form>
 
