--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,11 +13,14 @@
         <div class="logo">
             <a href="/"><img src="images/andrew-logo.png" alt="ak-logo"></a>
         </div>
-        <div class='nav-links'>
-            <a href="/">Home</a>
-            <a href="/workhistory">Past Work</a>
-            <a href="#">Projects</a>
-            <a href="#">About Me</a>
+        <div nav-middle>
+            <p class="date"><%= date %></p>
+            <div class='nav-links'>
+                <a href="/">Home</a>
+                <a href="/workhistory">Past Work</a>
+                <a href="#">Projects</a>
+                <a href="#">About Me</a>
+            </div>
         </div>
         <div class="nav-right">
             <a href="/login">Login</a>
