added content and styling to about page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="nav">
-        <div class="logo">
-            <a href="/"><img src="images/andrew-logo.png" alt="ak-logo"></a>
+        <div class="nav-left">
+            <a href="/">Andrew Kyle</a>
         </div>
         <div nav-middle>
             <p class="date"><%= date %></p>
@@ -19,7 +19,7 @@
                 <a href="/">Home</a>
                 <a href="/workhistory">Past Work</a>
                 <a href="#">Projects</a>
-                <a href="#">About Me</a>
+                <a href="/about">About Me</a>
             </div>
         </div>
         <div class="nav-right">
