--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,6 +1,6 @@
 /* General Page Styling */
 html {
-    background-color: #7c848b;
+    background-color: #b5b8bb;
 }
 
 body {
@@ -12,8 +12,21 @@ body {
 }
 
 /* Nav-Bar Styling */
-.logo {
-    margin-left: 2rem;
+.date {
+    text-shadow: 0px 0px 5px rgb(255, 255, 255);
+    color: #485563;
+    margin: auto;
+    font-size: 20px;
+}
+
+.nav-left {
+    margin: auto 0rem;
+}
+
+.nav-left a {
+    color: #485563;
+    font-size: 28px;
+    text-decoration: none;
 }
 
 .nav {
@@ -28,13 +41,13 @@ body {
 .nav-links {
     color: #485563;
     font-size: 28px;
-    margin: auto auto .1rem auto;
+    margin: auto;
     justify-content: space-between;
     width: 100%;
 }
 
 .nav-links a {
-    margin: auto 8rem;
+    margin: auto 9rem;
     color: #485563;
     text-decoration: none;
 }
@@ -44,10 +57,15 @@ body {
     text-shadow: 5px 5px 5px #302f2f;
 }
 
+.nav-middle {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+
 .nav-right {
     height: 100%;
-    margin-right: 2rem;
-    margin-top: 1rem;
+    margin: auto;
     width: 3%;
 }
 
@@ -60,12 +78,6 @@ body {
 .nav-right a:hover {
     color: #e6e6e6;
     text-shadow: 5px 5px 5px #302f2f;
-}
-
-.nav-middle p {
-    font-size: 30px;
-    margin: 1rem auto 8rem auto;
-    width: 10%
 }
 
 /* Footer Styling */
@@ -94,8 +106,72 @@ footer {
     width: fit-content;
 }
 
+.home-main {
+    background-color: rgb(219, 216, 216);
+    margin: auto;
+    width: 80%;
+}
+
+/* About Page Styling */
+.top-bar {
+    background-color: #ced9e2;
+    border-color: #3a7bd5;
+    border-style: ridge;
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+    margin: auto;
+    width: 55%; 
+}
+
+.about-btn {
+    border: solid 1px;
+    background: linear-gradient(#3a7bd5, #313131);
+    color: white;
+    font-size: 24px;
+    height: 100%;
+    justify-content: center;
+    margin: auto;
+    text-decoration: none;
+    vertical-align: middle;
+    width: 100%;
+}
+
+.about-btn:hover {
+    background: linear-gradient(#1c95e6, #313131);
+}
+
+.about-btn:active {
+    background: linear-gradient(to right, #00d2ff, #3a7bd5);
+}
+
+#family {
+    background-color: #313131;
+    color: #e6e6e6;
+    display: flex;
+    height: auto;
+    margin: 0rem auto;
+    width: 90%;
+}
+
+.about-p {
+    display: none;
+    justify-content: space-around;
+    margin-top: 1rem;
+    width: 80%;
+}
+
+.about-p img {
+    border-radius: 50px;
+    float: left;
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+}
+
+
+
 /* Login Page Styling */
-button {
+.sub-btn {
     border-width: 0px;
     border-radius: 6px;
     font-size: 19px;
@@ -104,15 +180,14 @@ button {
     margin-bottom: 1rem;
     text-align: center;
     padding: 6px 5px;
-    width: 68px;
 }
 
-button:hover {
+.sub-btn:hover {
     background: linear-gradient(to right, #00d2ff, #3a7bd5);
     cursor: pointer;
 }
 
-button:active {
+.sub-btn:active {
     border-width: 0px;
     transform: scale(1.1);
 }
@@ -153,15 +228,20 @@ input[type=username], input[type=password] {
 /* Registration Page Styling */
 .register {
     background-color: #ced9e2;
-    border: solid black;
+    border: solid #485563;
+    box-shadow: 5px 10px 20px black;
     border-width: 2px;
     font-size: 22px;
-    word-spacing: 10px;
+    word-spacing: 2px;
 }
 
 .register div {
     margin: 1rem auto;
     width: 100%;
+}
+
+.register p {
+    margin: 1rem;
 }
 
 .name {
