--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
             <input type="password" name="password" required placeholder="Password">
         </div>
 
-        <input type="button" value="Submit">
+        <button class="sub-btn" type="submit">Login</button>
 
         <p class="login-p">No account? Create one, <span class="reg-link"><a class="reg-a" href="/register">here</a></span>.</p>
     </div>
