--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,31 +2,33 @@
 
 <form action="/register" method="POST">
     <div class="register">
+        <p>Create an account, below!</p>
+        <hr>
         <div class="email">
-            <label for="email">Email</label>
+            <label for="email">Email:</label>
             <input type="email" name="email" required>
         </div>
         <div class="name">
             <div>
-                <label for="fname">First Name</label>
+                <label for="fname">First Name:</label>
                 <input type="text" name="fname" required>
             </div>
             <div>
-                <label for="lname">Last Name</label>
+                <label for="lname">Last Name:</label>
                 <input type="text" name="lname" required>
             </div>
             
         </div>
         <div class="uname-reg">
-            <label for="uname">Username</label>
+            <label for="uname">Username:</label>
             <input type="text" name="uname" required>
         </div>
         <div class="password">
-            <label for="password">Password</label>
+            <label for="password">Password:</label>
             <input type="password" name="password" required>
         </div>
 
-        <button type="submit">Submit</button>
+        <button class="sub-btn" type="submit">Register</button>
     </div>
 </form>
 
