--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,10 +3,10 @@
 <h1>Who I Am?</h1>
 
 <div class="top-bar">
-    <button class="about-btn">Family Man</button>
-    <button class="about-btn">Passion for Music</button>
-    <button class="about-btn">Gaming</button>
-    <button class="about-btn">Development/Coding</button>
+    <button class="about-btn" onclick="tabOptions(event, 'family')">Family Man</button>
+    <button class="about-btn" onclick="tabOptions(event, 'music')">Passion for Music</button>
+    <button class="about-btn" onclick="tabOptions(event, 'gaming')">Gaming</button>
+    <button class="about-btn" onclick="tabOptions(event, 'coding')">Development/Coding</button>
 </div>
 
 <div id="family" class="tabcontent">
