--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,14 +12,36 @@
 <div id="family" class="tabcontent">
 
     <div class="about-p">
-        <img src="images/family_pic_1.jpg" alt="family1" width="230px" height="260px">
-        <p>My top priority, in life is my family. They come first, above all. I'm happily married to my beautiful wife, in which we were together for 10 years before marriage.</p>
-        <p>I have 2 beautiful children, 1 girl(11), and 1 boy(4).</p>
+        <img class="img1" src="images/family_pic_1.jpg" alt="family1" width="230px" height="260px">
+        <p>My top priority, in life, is my family. They come first, above all. I'm happily married to my beautiful wife, in which we were together for 10 years before marriage.</p>
+        <p>I have 2 beautiful children, 1 girl(11), and 1 boy(4).
+            My wife and I had out daughter when we were around 16 years old, in 2009. It was definitely hard, becoming parents at such a young age but I also feel like it enabled us to grown and matured, pretty quickly. <br> I mean, we were kinda forced to. :) <br>
+            Since going to a normal high school wouldv'e been harder to take on, my wife and I attended a high school which allowed us to take our daughter to school with us. They had a daycare built into the school, with certified care-takers. <br>
+            My daughter loves doing gymnastics and cheer but unfortunately with Covid happening, everything is cancelled. So, if she's not doing Zoom or Loom, she likes playing Roblox with her friends. She's definately a daddy's girl!
+        </p>
+        <img class="img2" src="images/family_pic_2.jpg" alt="family2" width="230px" height="260px">
+        <p>
+            Fast-forward to 2016 and our son is born. A couple weeks after being alive he got a respitory infection which caused him to be quarantined in the nicu, for about a week. It was a real scare, but he was a strong little man and managed to push through it, along with the amazing doctors. <br>
+            My son is always so full of energy and loves to play, pretty much until bed time. He loves super heroes and superhero movies. His favorite super heroes are Black Panther and Spider-Man haha.
+        </p>
+        <p>
+            My wife and I got married November 2018. It was a beautiful night, definitely something to remember. It was a day that I just hoped would never end.
+        </p>
+        <img class="img3" src="images/married_pic_1.jpg" alt="married1" width="450px" height="280px">
     </div>
 </div>
 
 <div id="music" class="tabcontent">
-
+    <div class="about-p">
+        <iframe width="40%" height="300" scrolling="no" frameborder="no" allow="autoplay" 
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/842468336&color=%23514c3d&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+        </iframe>
+        <p>
+            Ever since I can remember, I've always loved music. Every kind of music. 
+            <br>
+            My favorite genre of music would have to be heavy metal 🤘😁🤘
+        </p>
+    </div>
 </div>
 
 <div id="gaming" class="tabcontent">
