added content to about and home page. Changed some styling to nav.

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -37,9 +37,21 @@
             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/842468336&color=%23514c3d&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
         </iframe>
         <p>
-            Ever since I can remember, I've always loved music. Every kind of music. 
+            Ever since I can remember, I've always loved music. Every kind of music, although I preferred some genres over others. 
             <br>
             My favorite genre of music would have to be heavy metal 🤘😁🤘
+        </p>
+        <p>
+            I've always known that I wanted to be a musician, ever since I was little. I just didn't know what instrument I wanted to play; all I knew was that I sure as hell couldn't sing.
+            My older brother was already playing drums so I thought to myself, "cool, I'll just play a stringed instrument."
+            <br>
+            So, I asked my dad to get me a bass... I mean, I respect the hell out of bass musicians, but I knew that it wasn't for me. I even tried getting bass lessons, but ended up going for only one day. I'm guessing my dad noticed me playing my uncle's guitar, more than my bass, because when I was 12 years old, my dad got me a starter Fender Strat and a tiny Spider II amp.
+            <br>
+            Ever Since then, I never stopped playing. I now have a couple guitars and a Spider V amp. My brother and I started a band with my uncle and a friend, but that didn't really go anywhere. We were yound and just wanted to play together, it was kind of a mess, but it was fun.
+            Now, I'm pretty much a one man band (No vocals, of course haha). I record and produce my own music, I use Logic Pro X and Mixcraft 7.
+        </p>
+        <p style="font-size: 20px;">
+            <strong>Check out my music, above!</strong>
         </p>
     </div>
 </div>
