--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 
 <div class="home-main">
     <h1 class="home-h1">Hello and Welcome!</h1>
-    <p class="home-p">My name is Andrew Kyle; I'm a father, husband, and and son.</p>
+    <p class="home-p">My name is Andrew Kyle; I'm a father, and husband</p>
 </div>
 
 
