added some cookie info, also made changes to app

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -57,7 +57,9 @@
 </div>
 
 <div id="gaming" class="tabcontent">
+    <div class="about-p">
 
+    </div>
 </div>
 
 <div id="coding" class="tabcontent">
