Added authenticated and cookies.

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,10 @@
-<script src="scripts/script.js"></script>
+<script src="/scripts/script.js"></script>
 </body>
 
 <footer>
     <div class="page-bottom">
-        <p>Made with <span class="heart">❤</span> by Andrew Kyle</p>
+        <div>
+            <a href="http://"></a>
+        </div>
     </div>
 </footer>
