added cookies and favicon

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,7 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Gayathri&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="/images/favicon/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
