--- a/views/about.ejs
+++ b/views/about.ejs
@@ -48,7 +48,7 @@
             So, I asked my dad to get me a bass... I mean, I respect the hell out of bass musicians, but I knew that it wasn't for me. I even tried getting bass lessons, but ended up going for only one day. I'm guessing my dad noticed me playing my uncle's guitar, more than my bass, because when I was 12 years old, my dad got me a starter Fender Strat and a tiny Spider II amp.
             <br>
             Ever Since then, I never stopped playing. I now have a couple guitars and a Spider V amp. My brother and I started a band with my uncle and a friend, but that didn't really go anywhere. We were yound and just wanted to play together, it was kind of a mess, but it was fun.
-            Now, I'm pretty much a one man band (No vocals, of course haha). I record and produce my own music, I use Logic Pro X and Mixcraft 7.
+            Now, I'm pretty much a one man band (No vocals, of course haha). I map out my songs with Guitar-Pro 7, then I record and produce my own music, I use Logic Pro X and Mixcraft 7.
         </p>
         <p style="font-size: 20px;">
             <strong>Check out my music, above!</strong>
@@ -58,7 +58,13 @@
 
 <div id="gaming" class="tabcontent">
     <div class="about-p">
-
+        <p>
+            Ever since I was a little boy, I've always been into gaming.
+            <br>
+            I remember my dad bought us a Super NES console and we had some pretty kick-ass games. Like Street Fighter II, George Forman K.O. Boxing, Tekken, and Super Mario World II. I'm sure we had more but I just forgot.
+            <br>
+            Ever since then, my hobby of gaming just blew up. We then got Playstation, then PS2, then 3, and so on and so-fourth.
+        </p>
     </div>
 </div>
 
