--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,10 @@
 <%- include('partials/header') %>
 
+<a class="logout" href="/logout" role="button">Logout</a>
 
+<div class="prof-main">
+    <img class="prof-img" src="/images/andrew-logo.png" alt="prof-img">
+</div>
 
 
 
