added style changes, footer and home content.

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
 <footer>
     <div class="page-bottom">
         <div>
-            <a href="http://"></a>
+            <a href="https://www.facebook.com/andrew.kyle.5011" class="fa fa-facebook" target="_blank"></a>
         </div>
     </div>
 </footer>
