--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -11,12 +11,36 @@ body {
     text-align: center;
 }
 
+p {
+    text-align: center;
+    padding: 10px;
+}
+
+hr {
+    margin-bottom: 1rem;
+    width: 65%;
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
 /* Nav-Bar Styling */
 .date {
-    text-shadow: 0px 0px 5px rgb(255, 255, 255);
     color: #485563;
-    margin: auto;
     font-size: 20px;
+    margin: auto;
+    padding: .1rem;
+    text-shadow: 0px 0px 5px rgb(255, 255, 255);
+    width: fit-content;
 }
 
 .nav-left {
@@ -96,13 +120,14 @@ footer {
 /* Main Page Content Styling */
 .home-h1 {
     font-size: 40px;
-    margin: 2rem auto auto 18rem;
+    margin: 2rem auto .5rem auto;
     width: fit-content;
 }
 
 .home-p {
+    align-content: flex-start;
     font-size: 25px;
-    margin: auto auto auto 18rem;
+    margin: auto;
     width: fit-content;
 }
 
@@ -112,6 +137,12 @@ footer {
     display: flex;
     flex-direction: column;
     margin: auto;
+    width: 80%;
+}
+
+.context {
+    margin: auto;
+    text-align: justify;
     width: 80%;
 }
 
@@ -303,14 +334,16 @@ input[type=username], input[type=password] {
 }
 
 .prof-main {
-    display: flexbox;
+    background: #ced9e2;
+    display: flex;
     margin: auto;
     width: 80%
 }
 
 .prof-img {
-    border: black 1px;
+    border-color: black;
     border-radius: 10px;
-    margin: auto 1rem auto auto;
+    border-width: 4px;
+    margin: auto auto auto 1rem;
     
 }
