--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Gayathri&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
