Updated wording on the home page.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,9 +4,9 @@
     <h1 class="home-h1">Welcome!</h1>
     <hr class="hr">
     <div class="context">
-        <p class="home-p">My name is Andrew Kyle; I'm a father, and husband, and web developer</p>
-        <p class="home-p">I'm also learning other programming languages like c++, python, and more.</p>
-        <p class="home-p">I also enjoy gaming, music, and science, so if you wanna chat about something, create an account or find me on one of my social media accounts.</p>
+        <p class="home-p">My name is Andrew Kyle; I'm a father, husband, and programmer/web developer.</p>
+        <p class="home-p">I'm also learning other programming languages such as: c++, python, and more.</p>
+        <p class="home-p">I enjoy gaming, music, and science, so if you wanna chat about something, create an account or find me on one of my social media accounts, below!</p>
     </div>
 </div>
 
