--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,18 +13,17 @@
 <body>
     <div class="nav">
         <div class="nav-left">
-            <a href="/">Andrew Kyle</a>
+            <a class="name-logo" href="/">Andrew Kyle</a>
         </div>
-        <div nav-middle>
-            <p class="date name"><%= data %></p>
+        <div class="nav-middle">
+            <p class="date"><%= data %></p>
             <div class='nav-links'>
                 <a href="/">Home</a>
-                <a href="/workhistory">Past Work</a>
                 <a href="#">Projects</a>
                 <a href="/about">About Me</a>
             </div>
         </div>
         <div class="nav-right">
-            <a href="<%= link %>"><%= note %></a>
+            <a href="https://www.facebook.com/andrew.kyle.5011" class="fa fa-facebook" target="_blank"></a>
         </div>
     </div>
