Added a couple changes regarding styling and some changes to the ejs files.

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -72,7 +72,12 @@
 
 </div>
 
-
-
+<!-- <script src="https://connect.soundcloud.com/sdk/sdk-3.3.2.js"></script>
+<script>
+  SC.initialize({
+    client_id: 'YOUR_CLIENT_ID',
+    redirect_uri: 'https://example.com/callback'
+  });
+</script> -->
 
 <%- include('partials/footer') %>
