--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,6 +24,9 @@
             </div>
         </div>
         <div class="nav-right">
+            <a href="https://github.com/andrew-kyle92" class="fa fa-github" target="_blank"></a>
             <a href="https://www.facebook.com/andrew.kyle.5011" class="fa fa-facebook" target="_blank"></a>
+            <a href="https://twitter.com/TwoFirstNames92" class="fa fa-twitter" target="_blank"></a>
+            <a href="https://soundcloud.com/andrew-kyle-1" class="fa fa-soundcloud" target="_blank"></a>
         </div>
     </div>
