--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -22,9 +22,8 @@ hr {
 }
 
 .fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
+    font-size: 50px;
+    padding: 10px 10px;
     text-align: center;
     text-decoration: none;
 }
@@ -89,6 +88,8 @@ hr {
 }
 
 .nav-right {
+    display: flex;
+    flex-direction: row;
     margin: auto;
 }
 
