--- a/views/about.ejs
+++ b/views/about.ejs
@@ -33,26 +33,33 @@
 
 <div id="music" class="tabcontent">
     <div class="about-p">
-        <iframe width="40%" height="300" scrolling="no" frameborder="no" allow="autoplay" 
-            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/842468336&color=%23514c3d&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
-        </iframe>
-        <p>
-            Ever since I can remember, I've always loved music. Every kind of music, although I preferred some genres over others. 
-            <br>
-            My favorite genre of music would have to be heavy metal 🤘😁🤘
-        </p>
-        <p>
-            I've always known that I wanted to be a musician, ever since I was little. I just didn't know what instrument I wanted to play; all I knew was that I sure as hell couldn't sing.
-            My older brother was already playing drums so I thought to myself, "cool, I'll just play a stringed instrument."
-            <br>
-            So, I asked my dad to get me a bass... I mean, I respect the hell out of bass musicians, but I knew that it wasn't for me. I even tried getting bass lessons, but ended up going for only one day. I'm guessing my dad noticed me playing my uncle's guitar, more than my bass, because when I was 12 years old, my dad got me a starter Fender Strat and a tiny Spider II amp.
-            <br>
-            Ever Since then, I never stopped playing. I now have a couple guitars and a Spider V amp. My brother and I started a band with my uncle and a friend, but that didn't really go anywhere. We were yound and just wanted to play together, it was kind of a mess, but it was fun.
-            Now, I'm pretty much a one man band (No vocals, of course haha). I map out my songs with Guitar-Pro 7, then I record and produce my own music, I use Logic Pro X and Mixcraft 7.
-        </p>
-        <p style="font-size: 20px;">
-            <strong>Check out my music, above!</strong>
-        </p>
+        <div class="music-content">
+            <div class="music">
+                <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" 
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/842468336&color=%23514c3d&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+                </iframe>
+            </div>
+            <div class="music-content-p">
+                <p>
+                    Ever since I can remember, I've always loved music. Every kind of music, although I preferred some genres over others. 
+                    <br>
+                    My favorite genre of music would have to be heavy metal 🤘😁🤘
+                </p>
+                <hr>
+                <p>
+                    I've always known that I wanted to be a musician, ever since I was little. I just didn't know what instrument I wanted to play; all I knew was that I sure as hell couldn't sing.
+                    My older brother was already playing drums so I thought to myself, "cool, I'll just play a stringed instrument."
+                    <hr>
+                    So, I asked my dad to get me a bass... I mean, I respect the hell out of bass musicians, but I knew that it wasn't for me. I even tried getting bass lessons, but ended up going for only one day. I'm guessing my dad noticed me playing my uncle's guitar, more than my bass, because when I was 12 years old, my dad got me a starter Fender Strat and a tiny Spider II amp.
+                    <hr>
+                    Ever Since then, I never stopped playing. I now have a couple guitars and a Spider V amp. My brother and I started a band with my uncle and a friend, but that didn't really go anywhere. We were young and just wanted to play together, it was kind of a mess, but it was fun.
+                    Now, I'm pretty much a one man band (No vocals, of course haha). I map out my songs with Guitar-Pro 7, then I record and produce my own music, I use Logic Pro X and Mixcraft 7.
+                </p>
+                <p style="font-size: 20px; float: left;">
+                    <strong><-- Check out my music!</strong>
+                </p>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -71,13 +78,5 @@
 <div id="coding" class="tabcontent">
 
 </div>
-
-<!-- <script src="https://connect.soundcloud.com/sdk/sdk-3.3.2.js"></script>
-<script>
-  SC.initialize({
-    client_id: 'YOUR_CLIENT_ID',
-    redirect_uri: 'https://example.com/callback'
-  });
-</script> -->
 
 <%- include('partials/footer') %>
