--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,10 @@
 <% scripts.forEach(script => { %>
-    <script src=<%=script%>></script>
-<% }) %>
+    <script src="<%= script %> "></script>
+<% }); %>
 </body>
 
 <footer>
     <div class="page-bottom">
+        <p>&#169; copyright <%= date %> by Andrew Kyle</p>
     </div>
 </footer>
