--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personal Website">
+    <meta name="keywords" content="html,css,javascript">
     <title><%= title %></title>
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Gayathri&display=swap" rel="stylesheet">
@@ -12,9 +14,7 @@
 </head>
 <body>
     <div class="nav">
-        <div class="nav-left">
-            <a class="name-logo" href="/">Andrew Kyle</a>
-        </div>
+        <a class="name-logo" href="/">Andrew Kyle</a>
         <div class="nav-middle">
             <div class='nav-links'>
                 <a href="/">Home</a>
