--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,37 +1,8 @@
 <%- include('partials/header') %>
 
-<h1>Who I Am?</h1>
-
 <div class="top-bar">
-    <button class="about-btn" onclick="tabOptions(event, 'family')">Family Man</button>
     <button class="about-btn" onclick="tabOptions(event, 'music')">Passion for Music</button>
-    <button class="about-btn" onclick="tabOptions(event, 'gaming')">Gaming</button>
     <button class="about-btn" onclick="tabOptions(event, 'coding')">Development/Coding</button>
-</div>
-
-<div id="family" class="tabcontent">
-
-    <div class="about-p">
-        <img class="img1" src="images/family_pic_1.jpg" alt="family1" width="230px" height="260px">
-        <p>My top priority, in life, is my family. They come first, above all. I'm happily married to my beautiful wife, in which we were together for 10 years before marriage.</p>
-        <hr>
-        <p>I have 2 beautiful children, 1 girl(11), and 1 boy(4).
-            My wife and I had out daughter when we were around 16 years old, in 2009. It was definitely hard, becoming parents at such a young age but I also feel like it enabled us to grown and matured, pretty quickly. <br> I mean, we were kinda forced to. :) <br>
-            Since going to a normal high school wouldv'e been harder to take on, my wife and I attended a high school which allowed us to take our daughter to school with us. They had a daycare built into the school, with certified care-takers. <br>
-            My daughter loves doing gymnastics and cheer but unfortunately with Covid happening, everything is cancelled. So, if she's not doing Zoom or Loom, she likes playing Roblox with her friends. She's definately a daddy's girl!
-        </p>
-        <hr>
-        <img class="img2" src="images/family_pic_2.jpg" alt="family2" width="230px" height="260px">
-        <p>
-            Fast-forward to 2016 and our son is born. A couple weeks after being alive he got a respitory infection which caused him to be quarantined in the nicu, for about a week. It was a real scare, but he was a strong little man and managed to push through it, along with the amazing doctors. <br>
-            My son is always so full of energy and loves to play, pretty much until bed time. He loves super heroes and superhero movies. His favorite super heroes are Black Panther and Spider-Man haha.
-        </p>
-        <hr>
-        <p>
-            My wife and I got married November 2018. It was a beautiful night, definitely something to remember. It was a day that I just hoped would never end.
-        </p>
-        <img class="img3" src="images/married_pic_1.jpg" alt="married1" width="450px" height="280px">
-    </div>
 </div>
 
 <div id="music" class="tabcontent">
@@ -43,38 +14,15 @@
                 </iframe>
             </div>
             <div class="music-content-p">
-                <p>
-                    Ever since I can remember, I've always loved music. Every kind of music, although I preferred some genres over others. 
-                    <br>
-                    My favorite genre of music would have to be heavy metal 🤘😁🤘
-                </p>
-                <hr>
-                <p>
-                    I've always known that I wanted to be a musician, ever since I was little. I just didn't know what instrument I wanted to play; all I knew was that I sure as hell couldn't sing.
-                    My older brother was already playing drums so I thought to myself, "cool, I'll just play a stringed instrument."
-                    <hr>
-                    So, I asked my dad to get me a bass... I mean, I respect the hell out of bass musicians, but I knew that it wasn't for me. I even tried getting bass lessons, but ended up going for only one day. I'm guessing my dad noticed me playing my uncle's guitar, more than my bass, because when I was 12 years old, my dad got me a starter Fender Strat and a tiny Spider II amp.
-                    <hr>
-                    Ever Since then, I never stopped playing. I now have a couple guitars and a Spider V amp. My brother and I started a band with my uncle and a friend, but that didn't really go anywhere. We were young and just wanted to play together, it was kind of a mess, but it was fun.
-                    Now, I'm pretty much a one man band (No vocals, of course haha). I map out my songs with Guitar-Pro 7, then I record and produce my own music, I use Logic Pro X and Mixcraft 7.
-                </p>
-                <p style="font-size: 20px; float: left;">
-                    <strong><-- Check out my music!</strong>
-                </p>
+                <li>I'm a self-taught guitarist who's been playing for 17 years!</li>
+                <br>
+                <li>I later taught myself music production and started recording my own music.</li>
+                <br>
+                <li>Music is a passion of mine that helps in so many ways. It's cathartic and allows me to express myself.</li>
+                <br>
+                <li>I can't imagine a world without music.</li>
             </div>
         </div>
-    </div>
-</div>
-
-<div id="gaming" class="tabcontent">
-    <div class="about-p">
-        <p>
-            Ever since I was a little boy, I've always been into gaming.
-            <br>
-            I remember my dad bought us a Super NES console and we had some pretty kick-ass games. Like Street Fighter II, George Forman K.O. Boxing, Tekken, and Super Mario World II. I'm sure we had more but I just forgot.
-            <br>
-            Ever since then, my hobby of gaming just blew up. We then got Playstation, then PS2, then 3, and so on and so-fourth.
-        </p>
     </div>
 </div>
 
