--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,16 @@
 <%- include('partials/header') -%>
 
 <div class="home-main">
-    <h1 class="home-h1">Welcome!</h1>
+    <div class="home-top">
+        <img class="avatar" src="images/Andrew.jpg" alt="andrew-pic">
+        <div class="home-top-desc">
+            <h1>Andrew Kyle</h1>
+            <p class="home-top-p">Programmer • Web Developer • Musician</p>
+        </div>
+    </div>
     <hr class="hr">
     <div class="context">
-        <p class="home-p">My name is Andrew Kyle; I'm a father, husband, and programmer/web developer.</p>
-        <p class="home-p">I'm also learning other programming languages such as: c++, python, and more.</p>
+        <p class="home-p">Currently, I'm working on personal projects and expanding my programming skills in python.</p>
     </div>
 </div>
 
