Added content to home page, added more styling

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -114,6 +114,7 @@ footer {
 footer p {
     width: fit-content;
     margin: auto;
+    font-weight: bold;
 }
 
 .heart {
@@ -169,6 +170,12 @@ footer p {
     margin: 2rem auto;
     text-align: justify;
     width: 80%;
+}
+
+.email {
+    text-shadow: 1px 0px 10px #e6e6e6;
+    text-decoration: none;
+    color: #e6e6e6;
 }
 
 /* About Page Styling */
