--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,11 @@
     </div>
     <hr class="hr">
     <div class="context">
-        <p class="home-p">Currently, I'm working on personal projects and expanding my programming skills in python.</p>
+        <p class="home-p">I'm a self-taught programmer and web developer who's passionate about content creation and and web design.
+            I also love music and creating music. If interested, check out my soundcloud page to have a listen.
+        </p>
+        <p class="home-p">Be sure to check out the projects I'm working on, it's not all there but will be updated, in time.</p>
+        <p class="home-p">If you would like a copy of my resume, contact me at: <a class="email" href="mailto:andrewkyle@andrewkyle.dev">andrewkyle@andrewkyle.dev</a></p>
     </div>
 </div>
 
