--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,7 @@
 
 <div class="top-bar">
     <button class="about-btn" onclick="tabOptions(event, 'music')">Passion for Music</button>
-    <button class="about-btn" onclick="tabOptions(event, 'coding')">Development/Coding</button>
+    <button class="about-btn" onclick="tabOptions(event, 'coding')">Development / Coding</button>
 </div>
 
 <div id="music" class="tabcontent">
@@ -14,7 +14,7 @@
                 </iframe>
             </div>
             <div class="music-content-p">
-                <li>I'm a self-taught guitarist who's been playing for 17 years!</li>
+                <li>I'm a self-taught guitarist who's been playing for <%= guitar %>  years!</li>
                 <br>
                 <li>I later taught myself music production and started recording my own music.</li>
                 <br>
