--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
             I also love music and creating music. If interested, check out my soundcloud page to have a listen.
         </p>
         <p class="home-p">Be sure to check out the projects I'm working on, it's not all there but will be updated, in time.</p>
-        <p class="home-p">If you would like a copy of my resume, contact me at: <a class="email" href="mailto:andrewkyle@andrewkyle.dev">andrewkyle@andrewkyle.dev</a></p>
+        <p class="home-p">If you would like to get in contact or get copy of my resume, contact me at: <a class="email" href="mailto:andrewkyle@andrewkyle.dev">andrewkyle@andrewkyle.dev</a></p>
     </div>
 </div>
 
