--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -268,6 +268,59 @@ footer p {
     margin: 0rem 1rem;
 }
 
+.audio-player-controls {
+    margin: auto;
+    width: fit-content;
+}
+
+.audio-player {
+    background-color: #e6e6e6;
+    color: #313131;
+}
+
+.audio-player h1 {
+    margin: auto;
+    width: fit-content;
+}
+
+audio {
+    margin: auto;
+}
+
+audio::-webkit-media-controls-panel{
+    background: #b1acac;
+}
+
+.song-list {
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80%;
+    margin: 1rem 3.5rem;
+    text-align: center;
+}
+
+.song-list button {
+    background: #8b8b8b;
+    border: solid 1px;
+    border-radius: 5px;
+    color: white;
+    width: 100%;
+    height: 25px;
+}
+
+.song-list button:hover {
+    background: #6d6d6d;
+}
+
+.song.song-active {
+    background: #5c5c5c;
+}
+
+.song-list th {
+    text-decoration: underline;
+}
+
 /* Responsive Styling */
 @media screen and (max-width: 1500px) {
     .nav-links a {
