Added projects page, styling. Fixed song names

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,7 +10,7 @@
         <div class="music-content">
             <div class="music">
                 <div class="audio-player">
-                    <h1 class="song-title">Song Title</h1>
+                    <h1 class="song-title"></h1>
                     <div class="audio-player-controls">
                         <audio id="my-audio" controls="controls" controlsList="nodownload"></audio>
                     </div>
@@ -73,7 +73,11 @@
 </div>
 
 <div id="coding" class="tabcontent">
-
+    <div class="about-p">
+        <div class="coding-content">
+            <h1>Coming soon...</h1>
+        </div>
+    </div>
 </div>
 
 <%- include('partials/footer') %>
