--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -182,6 +182,25 @@ footer p {
     text-decoration: underline;
 }
 
+/* End Home Page Styling */
+
+/* Projects Page Styling */
+
+.projects-main {
+    background: #313131;
+    display: flex;
+    height: 100%;
+    margin: auto;
+    width: 80%;
+}
+
+.projects-main h1 {
+    color: #e6e6e6;
+    margin: 2rem auto;
+}
+
+/* End Projects Page Styling */
+
 /* About Page Styling */
 .top-bar {
     background-color: #ced9e2;
@@ -276,10 +295,12 @@ footer p {
 .audio-player {
     background-color: #e6e6e6;
     color: #313131;
+    display: flex;
+    flex-direction: column;
 }
 
 .audio-player h1 {
-    margin: auto;
+    margin: 1rem auto;
     width: fit-content;
 }
 
@@ -335,6 +356,23 @@ audio::-webkit-media-controls-play-button {
 .song-list th {
     text-decoration: underline;
 }
+
+#coding {
+    background-color: #313131;
+    color: #e6e6e6;
+    display: none;
+    height: auto;
+    margin: 0rem auto;
+    width: 90%;
+}
+
+.coding-content {
+    display: flex;
+    flex-direction: row;
+    height: 450px;
+}
+
+/* End About Page Styling */
 
 /* Responsive Styling */
 @media screen and (max-width: 1500px) {
