--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
         <div class="nav-middle">
             <div class='nav-links'>
                 <a href="/">Home</a>
-                <a href="#">Projects</a>
+                <a href="/projects">Projects</a>
                 <a href="/about">About Me</a>
             </div>
         </div>
